sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: '(' expected but '{' found.
	while {(plusPetit(i, i+1))}
              ^AlgBubbleSort1:9: error: illegal start of simple expression
}
^AlgBubbleSort1:10: error: 'while' expected but '}' found.
}
^